# herosheet

./: .gitignore  Cargo.toml  README.md  Rocket.toml
.github/workflows/: build.yml
src/: main.rs
templates/: index.html.tera  macros.html.tera  success.html.tera
